Update slider bar for list products on home page

--- a/OnlineStoreMVC/OnlineStoreMVC.csproj
+++ b/OnlineStoreMVC/OnlineStoreMVC.csproj
@@ -1591,6 +1591,9 @@
     <Content Include="Content\plugins\morris\morris.css" />
     <Content Include="Content\plugins\morris\morris.js" />
     <Content Include="Content\plugins\morris\morris.min.js" />
+    <Content Include="Content\plugins\owl-sliderbar\css\owl.carousel.min.css" />
+    <Content Include="Content\plugins\owl-sliderbar\css\owl.theme.default.min.css" />
+    <Content Include="Content\plugins\owl-sliderbar\js\owl.carousel.min.js" />
     <Content Include="Content\plugins\pace\pace.js" />
     <Content Include="Content\plugins\pagingcontrol\jquery.simplePagination.js" />
     <Content Include="Content\plugins\pagingcontrol\simplePagination.css" />
@@ -1885,59 +1888,6 @@
     <Content Include="Scripts\Utility\common.js" />
     <Content Include="Scripts\webjs\easyResponsiveTabs.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Scripts\js\10-bootstrap.min.js" />
-    <Content Include="Scripts\js\14-device.min.js" />
-    <Content Include="Scripts\js\15-jquery.total-storage.min.js" />
-    <Content Include="Scripts\js\15-jquery.uniform-modified.js" />
-    <Content Include="Scripts\js\16-jquery.scrollmagic.min.js" />
-    <Content Include="Scripts\js\17-jquery.scrollmagic.debug.js" />
-    <Content Include="Scripts\js\18-TimelineMax.min.js" />
-    <Content Include="Scripts\js\19-TweenMax.min.js" />
-    <Content Include="Scripts\js\7830-582-10-3714.js" />
-    <Content Include="Scripts\js\ajax-cart.js" />
-    <Content Include="Scripts\js\ajax-wishlist.js" />
-    <Content Include="Scripts\js\analytics.js" />
-    <Content Include="Scripts\js\application2.js" />
-    <Content Include="Scripts\js\blocknewsletter.js" />
-    <Content Include="Scripts\js\cloudflare.min.js" />
-    <Content Include="Scripts\js\common.js" />
-    <Content Include="Scripts\js\count.js" />
-    <Content Include="Scripts\js\front%283%29.js" />
-    <Content Include="Scripts\js\front%284%29.js" />
-    <Content Include="Scripts\js\front.js" />
-    <Content Include="Scripts\js\ga.js" />
-    <Content Include="Scripts\js\global.js" />
-    <Content Include="Scripts\js\gtm.js" />
-    <Content Include="Scripts\js\homeslider.js" />
-    <Content Include="Scripts\js\hoverIntent.js" />
-    <Content Include="Scripts\js\index.js" />
-    <Content Include="Scripts\js\jquery-1.11.0.min.js" />
-    <Content Include="Scripts\js\jquery-migrate-1.2.1.min.js" />
-    <Content Include="Scripts\js\jquery.autocomplete.js" />
-    <Content Include="Scripts\js\jquery.bxslider.js" />
-    <Content Include="Scripts\js\jquery.easing.js" />
-    <Content Include="Scripts\js\jquery.fancybox.js" />
-    <Content Include="Scripts\js\jquery.fittext.js" />
-    <Content Include="Scripts\js\jquery.scrollTo.js" />
-    <Content Include="Scripts\js\jquery.serialScroll.js" />
-    <Content Include="Scripts\js\js.js" />
-    <Content Include="Scripts\js\loader0.js" />
-    <Content Include="Scripts\js\products-comparison.js" />
-    <Content Include="Scripts\js\script-demo.min.js" />
-    <Content Include="Scripts\js\stats.js" />
-    <Content Include="Scripts\js\storage.js" />
-    <Content Include="Scripts\js\superfish.js" />
-    <Content Include="Scripts\js\themeconfiglink.js" />
-    <Content Include="Scripts\js\tmmegamenu.js" />
-    <Content Include="Scripts\js\tmnewsletter.js" />
-    <Content Include="Scripts\js\tmrelatedproducts.js" />
-    <Content Include="Scripts\js\tmsearch.js" />
-    <Content Include="Scripts\js\tools.js" />
-    <Content Include="Scripts\js\treeManagement.js" />
-    <Content Include="Scripts\js\util.js" />
-    <Content Include="Scripts\js\validate.js" />
-    <Content Include="Scripts\js\wp-embed.min.js" />
-    <Content Include="Scripts\js\wp-emoji-release.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
