--- a/OnlineStore.Infractructure/OnlineStore.Infractructure.csproj
+++ b/OnlineStore.Infractructure/OnlineStore.Infractructure.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\CustomException.cs" />
     <Compile Include="Utility\Define.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\MailHelper.cs" />
