Updtae layout for new requirement

--- a/OnlineStore.Infractructure/OnlineStore.Infractructure.csproj
+++ b/OnlineStore.Infractructure/OnlineStore.Infractructure.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\FormatHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\CustomException.cs" />
     <Compile Include="Utility\Define.cs" />
