--- a/OnlineStore.Model/OnlineStore.Model.csproj
+++ b/OnlineStore.Model/OnlineStore.Model.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="ViewModel\BannerViewModel.cs" />
+    <Compile Include="ViewModel\QuickQuoteViewModel.cs" />
     <Compile Include="ViewModel\OrderManagementViewModel.cs" />
     <Compile Include="ViewModel\ProductGroupViewModel.cs" />
     <Compile Include="ViewModel\ProfileViewModel.cs" />
