--- a/OnlineStoreMVC/OnlineStoreMVC.csproj
+++ b/OnlineStoreMVC/OnlineStoreMVC.csproj
@@ -1854,7 +1854,7 @@
     <Content Include="Views\Order\OrderSuccessful.cshtml" />
     <Content Include="Views\Home\GroupProductPatial.cshtml" />
     <Content Include="Views\Shared\_BranchFilterPartialView.cshtml" />
-    <Content Include="Views\Home\Sent.cshtml" />
+    <Content Include="Views\Home\QuickQuoteCompleted.cshtml" />
     <Content Include="Views\Product\DisplayGroupProducts.cshtml" />
     <Content Include="Views\Product\DisplayProductsOfBranch.cshtml" />
     <Content Include="Views\Shared\_CategoryFilterPartialView.cshtml" />
@@ -1862,6 +1862,7 @@
     <Content Include="Views\Shared\_ListBrands.cshtml" />
     <Content Include="Views\Shared\_BrandBanner.cshtml" />
     <Content Include="Views\Home\QuickQuote.cshtml" />
+    <Content Include="Views\Home\Sent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
