--- a/OnlineStoreMVC/Web.config
+++ b/OnlineStoreMVC/Web.config
@@ -100,7 +100,7 @@
         <network host="smtp.gmail.com"
                  port="587"
                  userName="trungkien3289@gmail.com"
-                 password="8299231373289k!@#"
+                 password="8299231"
                  enableSsl="true" />
       </smtp>
     </mailSettings>
