Thêm logo sản phẩm

--- a/OnlineStoreMVC/OnlineStoreMVC.csproj
+++ b/OnlineStoreMVC/OnlineStoreMVC.csproj
@@ -214,6 +214,27 @@
     <Content Include="Content\ckeditor\ckeditor.js" />
     <Content Include="Content\ckeditor\config.js" />
     <Content Include="Content\ckeditor\contents.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\dialog.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\dialog_ie.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\dialog_ie8.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\dialog_iequirks.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\editor.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\editor_gecko.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\editor_ie.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\editor_ie8.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\editor_iequirks.css" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\icons.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\icons_hidpi.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\arrow.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\close.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\hidpi\close.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\hidpi\lock-open.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\hidpi\lock.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\hidpi\refresh.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\lock-open.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\lock.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\refresh.png" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\images\spinner.gif" />
     <Content Include="Content\ckeditor\styles.js" />
     <Content Include="Content\ckfinder\bin\Release\CKFinder.dll" />
     <Content Include="Content\ckfinder\changelog.txt" />
@@ -866,11 +887,9 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\html5shiv\3.7.2\html5shiv.min.js" />
     <Content Include="Content\Images\background_image.png" />
-    <Content Include="Content\Images\Banners\bakery-cake.png" />
     <Content Include="Content\Images\Banners\Banner.jpg" />
     <Content Include="Content\Images\Banners\faviorIcon.jpg" />
-    <Content Include="Content\Images\Banners\kitchen-tools.png" />
-    <Content Include="Content\Images\Banners\XaviaLogo1.png" />
+    <Content Include="Content\Images\Banners\nhanphuoclogo.jpg" />
     <Content Include="Content\Images\bx_loader.gif" />
     <Content Include="Content\Images\CMSNewsImages\item_0_21-3.jpg" />
     <Content Include="Content\Images\CMSNewsImages\item_0_3-home-default.jpg" />
@@ -1379,6 +1398,7 @@
     <Content Include="Content\font-awesome\4.3.0\fonts\UTM AvoBold.ttf" />
     <Content Include="Content\font-awesome\4.3.0\fonts\UTM AvoBold_Italic.ttf" />
     <Content Include="Content\font-awesome\4.3.0\fonts\UTM AvoItalic.ttf" />
+    <Content Include="Content\ckeditor\skins\moono-lisa\readme.md" />
     <None Include="Properties\PublishProfiles\Construction.pubxml" />
     <None Include="Properties\PublishProfiles\ConstructionToolsStore.pubxml" />
     <None Include="Properties\PublishProfiles\xaviadecor.pubxml" />
@@ -1479,7 +1499,6 @@
     <Folder Include="Content\ckeditor\adapters\" />
     <Folder Include="Content\ckeditor\lang\" />
     <Folder Include="Content\ckeditor\plugins\" />
-    <Folder Include="Content\ckeditor\skins\" />
     <Folder Include="Content\ckfinder\plugins\fileeditor\bin\Debug\" />
     <Folder Include="Content\ckfinder\plugins\fileeditor\bin\Release\" />
     <Folder Include="Content\ckfinder\plugins\imageresize\bin\Debug\" />
